fixup! Align detail tables vertically

--- a/css/details.css
+++ b/css/details.css
@@ -1,5 +1,4 @@
 table {
-	display: table;
 	width: 48%;
 	float: left;
 	margin-bottom: 1.5em;
